# SurfaceTopography

./: .check_mufft_capabilities.py  .check_netcdf_capabilities.py  .cirrus.yml  .gitattributes  .gitignore  .gitmodules  .install_parallel_netcdf.sh  .travis.before_install.bash  .travis.yml  AUTHORS  CONTRIBUTING.md  MANIFEST.in  README.md  SUPPORTED_FORMATS.md  contributing.html  development.html  discover_version.py  env.sh  genindex.html  index.html  installation.html  meson.build  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  run-tests.py  search.html  searchindex.js  setup.cfg  setup.py  supported_formats.html  testing.html  usage.html
.github/workflows/: build-wheels.yml  codeql-analysis.yml  flake8.yml  main.yml  publish.yml  pypi.yml  run_tests.yml  test-building-wheels.yml  test-code-functionality.yml  test-source-package.yml  tests.yml  wheels.yml
PyCo/SurfaceTopography/: Converters.py  Generation.py  NonuniformLineScan.py  Special.py  __init__.py
PyCo/Tools/: __init__.py
PyCo/Topography/: Autocorrelation.py  Converters.py  Detrending.py  FromFile.py  (+21 more)
SurfaceTopography/: ChangeLog.md  Converters.py  DiscoverVersion.py  Exceptions.py  FFTTricks.py  Generation.py  HeightContainer.py  Interpolation.py  Metadata.py  NonuniformLineScan.py  Pipeline.py  Special.py  UniformLineScanAndTopography.py  UnitConversion.py  Version.py  __init__.py  common.py  meson.build
SurfaceTopography/CLI/: ShowTopography.py  meson.build
SurfaceTopography/Container/: Averaging.py  IO.py  Integration.py  Moments.py  ScaleDependentStatistics.py  SurfaceContainer.py  __init__.py  common.py  meson.build
SurfaceTopography/Container/IO/: CE.py  Reader.py  ZAG.py  __init__.py  meson.build
SurfaceTopography/Generic/: Curvature.py  Fractional.py  Moments.py  ReliabilityCutoff.py  RobustStatistics.py  ScaleDependentStatistics.py  ScanningProbe.py  Slope.py  __init__.py  meson.build
SurfaceTopography/IO/: AL3D.py  BCR.py  DATX.py  DI.py  DZI.py  EZD.py  FRT.py  FromFile.py  GWY.py  H5.py  IBW.py  JPK.py  LEXT.py  MI.py  MNT.py  Matlab.py  MetroPro.py  Mitutoyo.py  NC.py  NMM.py  NMS.py  NPY.py  OIR.py  OPD.py  OPDx.py  OS3D.py  PLU.py  PLUX.py  PS.py  Reader.py  SDF.py  SUR.py  TMD.py  Text.py  VK.py  VK4.py  WSXM.py  X3P.py  XYZ.py  ZMG.py  (+7 more)
SurfaceTopography/Models/: SelfAffine.py  meson.build
SurfaceTopography/Nonuniform/: Autocorrelation.py  BearingArea.py  Converters.py  Derivative.py  Detrending.py  Interpolation.py  PowerSpectrum.py  ScalarParameters.py  ScaleDependentStatistics.py  VariableBandwidth.py  __init__.py  common.py  meson.build
SurfaceTopography/ScanningProbe/: RigidScan.py  __init__.py  meson.build
SurfaceTopography/Support/: Bibliography.py  Deprecation.py  Interpolation.py  JSON.py  Regression.py  UnitConversion.py  __init__.py  meson.build
SurfaceTopography/Tools/: __init__.py  common.py
SurfaceTopography/Uniform/: Autocorrelation.py  BearingArea.py  Converters.py  Derivative.py  Detrending.py  Filtering.py  GeometryAnalysis.py  Imputation.py  Integration.py  Interpolation.py  PowerSpectrum.py  ScalarParameters.py  ScaleDependentStatistics.py  ScanLineAlignment.py  VariableBandwidth.py  __init__.py  common.py  meson.build
_modules/: index.html
_sources/: contributing.rst.txt  development.rst.txt  index.rst.txt  installation.rst.txt  testing.rst.txt  usage.rst.txt
_static/: documentation_options.js
c/: PyCo_module.cpp  autocorrelation.cpp  autocorrelation.h  bicubic.cpp  bicubic.h  meson.build  module.cpp  patchfinder.cpp
cpp/: autocorrelation.cpp  autocorrelation.h  bearing_area.cpp  bearing_area.h  bicubic.cpp  bicubic.h  eigen_helper.h  meson.build  module.cpp  moments.h  patchfinder.cpp  patchfinder.h  row_major.h
docs/: conf.py  contributing.rst  development.rst  index.rst  installation.rst  supported_formats.rst  testing.rst  usage.rst
examples/: 230207_scalar_parameters_from_PSD.ipynb.html  bicubic_interpolation.py  elastic_energy_from_ACF.py  fourier_synthesis.ipynb
file_formats/: MNT.html  index.html
helpers/: HurstEstimationNumerics.py  HurstEstimationSymbolics.py  PowerSpectrumSymbolics.py  WindowTest.py
maintenance/: copyright.py  replace_header.py  update_license_headers.sh
singularity/: SurfaceTopography_serial.def
source/: SurfaceTopography.CLI.html  SurfaceTopography.Container.IO.html  SurfaceTopography.Container.html  SurfaceTopography.Generic.html  SurfaceTopography.IO.html  SurfaceTopography.Models.html  SurfaceTopography.Nonuniform.html  SurfaceTopography.ScanningProbe.html  SurfaceTopography.Support.html  SurfaceTopography.Tools.html  SurfaceTopography.Uniform.html  SurfaceTopography.html  modules.html
test/: compare-orientation-with-gwyddion.py  conftest.py  test_api.py  test_autocorrelation.py  test_bearing_area.py  test_bicubic.py  test_bicubic_interpolation.py  test_container.py  test_container_pipeline.py  test_derivatives.py  test_downsample.py  test_filtering.py  test_fractional_derivative.py  test_generation.py  test_geometry_analysis.py  test_import.py  test_imputation.py  test_linear_interpolation.py  test_make_sphere.py  test_make_topography_from_function.py  test_missing_data.py  test_moments.py  test_nonuniform_line_scan.py  test_parallel.py  test_patchfinder.py  test_pipeline.py  test_power_spectrum.py  test_reentrant.py  test_regression.py  test_reliability_cutoff.py  test_robust_statistics.py  test_scalar_parameters.py  test_scalar_parameters_container.py  test_scale_dependent_statistics.py  test_scan_line_alignment.py  test_scanning_probe.py  test_slope.py  test_support.py  test_topography.py  test_topography1.py  (+5 more)
tests/: GenerationTests.py  ImportTest.py  PowerSpectrumTest.py  TopographyScalarParametersTest.py  VariableBandwidthTest.py  __init__.py  compare-orientation-with-gwyddion.py  conftest.py  test_autocorrelation.py  test_bicubic.py  test_coding_convention.py  test_filtering.py  test_generation.py  test_import.py  test_make_sphere.py  test_power_spectrum.py  test_scalar_parameters.py  test_topography1.py  test_topography2.py  test_variable_bandwidth.py
(+222 files in other folders)
