[build-system]
requires = [
    "meson>=1.0.0",
    "meson-python>=0.13.0",
    "ninja",
    "oldest-supported-numpy; python_version=='3.8'",
    "numpy>=2.0.0; python_version>='3.9'",
    "DiscoverVersion"
]
build-backend = "mesonpy"

[project]
name = "SurfaceTopography"
description = "Read and analyze surface topographies"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" },
    { name = "Kai Haase", email = "k.o.haase@googlemail.com" },
    { name = "Johannes Hörmann", email = "johannes.hoermann@imtek.uni-freiburg.de" },
    { name = "Till Junge", email = "till.junge@altermail.ch" },
    { name = "Michael Röttger", email = "info@michael-roettger.de" },
    { name = "Antoine Sanner", email = "antoine.sanner@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]
requires-python = ">=3.8.0"
dynamic = [ "version" ]
dependencies = [
    "DiscoverVersion",
    "numpy",
    "scipy>=1.9.0",
    "defusedxml",
    "h5py",
    "igor2",
    "matplotlib>=1.0.0",
    "muFFT>=0.91.2",
    "NuMPI>=0.6.1",
    "numpyencoder",
    "openpyxl",
    "Pillow",
    "python-dateutil",
    "pyyaml",
    "requests",
    "tiffile",
    "xmltodict",
    "pandas"
]

[project.optional-dependencies]
test = [
    "flake8<8",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "runtests"
]

[project.urls]
documentation = "https://contactengineering.github.io/SurfaceTopography/"
repository = "https://github.com/ContactEngineering/SurfaceTopography"
changelog = "https://github.com/ContactEngineering/SurfaceTopography/blob/master/SurfaceTopography/ChangeLog.md"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
