[build-system]
requires = [
    "meson>=1.0.0",
    "meson-python>=0.13.0",
    "ninja",
    "numpy>=2.0.0",
    "DiscoverVersion>=0.3.2"
]
build-backend = "mesonpy"

[project]
name = "SurfaceTopography"
description = "Read and analyze surface topographies"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" },
    { name = "Kai Haase", email = "k.o.haase@googlemail.com" },
    { name = "Johannes Hörmann", email = "johannes.hoermann@imtek.uni-freiburg.de" },
    { name = "Till Junge", email = "till.junge@altermail.ch" },
    { name = "Michael Röttger", email = "info@michael-roettger.de" },
    { name = "Antoine Sanner", email = "antoine.sanner@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]
requires-python = ">=3.10.0"
dynamic = ["version"]
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.9.0",
    "defusedxml",
    "h5py",
    "igor2",
    "matplotlib>=1.0.0",
    "muGrid>=0.103.0",
    "NuMPI>=0.9.0",
    "numpyencoder",
    "openpyxl",
    "Pillow",
    "python-dateutil",
    "pyyaml",
    "requests",
    "tiffile",
    "xmltodict",
    "pandas",
    "pydantic",
    "zstandard"
]

[project.optional-dependencies]
test = [
    "flake8<8",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "runtests"
]

[project.urls]
documentation = "https://contactengineering.github.io/SurfaceTopography/"
repository = "https://github.com/ContactEngineering/SurfaceTopography"
changelog = "https://github.com/ContactEngineering/SurfaceTopography/blob/master/SurfaceTopography/ChangeLog.md"

[project.scripts]
show-topography = "SurfaceTopography.CLI.ShowTopography:main"

[tool.meson-python]
# Allow bundling shared libraries on Windows (needed for extension modules)
allow-windows-internal-shared-libs = true

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.isort]
profile = "black"

