[aliases]
test = pytest

[flake8]
max-line-length = 120

[metadata]
name = SurfaceTopography
description = Read and analyze surface topographies
readme = README.md
package_data = {'': ['ChangeLog.md']}
include_package_data = True
python_requires = >=3.5.0
use_scm_version = True
zip_safe = False
license = MIT
author = Lars Pastewka
author_email = lars.pastewka@imtek.uni-freiburg.de
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
test_suite = tests
tests_require =
    pytest
install_requires =
    numpy>=1.16.3
    NuMPI>=0.3.0
    muFFT>=0.12.0
    igor
    h5py
    defusedxml
    numpyencoder
    openpyxl
    pyyaml
    Pillow
    requests
    matplotlib>=1.0.0
    python-dateutil
    tiffile
