[aliases]
test = pytest

[flake8]
max-line-length = 120

[metadata]
name = SurfaceTopography
description = Read and analyze surface topographies
long_description = file: README.md, SurfaceTopography/ChangeLog.md
license = MIT
license_files = LICENSE.md
author = Lars Pastewka
author_email = lars.pastewka@imtek.uni-freiburg.de
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python

[options]
python_requires = >=3.5.0
use_scm_version = True
zip_safe = False
include_package_data = True
test_suite = tests
install_requires =
    NuMPI>=0.3.0
    muFFT>=0.12.0
    igor
    h5py
    defusedxml
    numpyencoder
    openpyxl
    pyyaml
    Pillow
    requests
    matplotlib>=1.0.0
    python-dateutil
    tiffile

[options.package_data]
changelog = ChangeLog.md

[options.extras_require]
test =
    pytest
    pytest-cov
    runtests
