    # https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'Exceptions.py',
    'FFTTricks.py',
    'Generation.py',
    'HeightContainer.py',
    'NonuniformLineScan.py',
    'Special.py',
    'UniformLineScanAndTopography.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    pure: false # Will be installed next to binaries
)
