   # https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'Averaging.py',
    'common.py',
    'IO.py',
    'ScaleDependentStatistics.py',
    'SurfaceContainer.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    pure: false # Will be installed next to binaries
)
