# Pure Python sources
python_sources = [
    '__init__.py',
    'Averaging.py',
    'common.py',
    'ScaleDependentStatistics.py',
    'SurfaceContainer.py',
    'Integration.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'SurfaceTopography/Container'
)

subdir('IO')