    # https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'Curvature.py',
    'ReliabilityCutoff.py',
    'RobustStatistics.py',
    'ScaleDependentStatistics.py',
    'ScanningProbe.py',
    'Slope.py',
    'Fractional.py',
    'Moments.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'SurfaceTopography/Generic'
)
