    # https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'AL3D.py',
    'binary.py',
    'common.py',
    'DI.py',
    'DZI.py',
    'FromFile.py',
    'H5.py',
    'IBW.py',
    'Matlab.py',
    'MI.py',
    'Mitutoyo.py',
    'NC.py',
    'NPY.py',
    'OPD.py',
    'OPDx.py',
    'PS.py',
    'Reader.py',
    'SUR.py',
    'Text.py',
    'VK.py',
    'X3P.py',
    'ZON.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'SurfaceTopography/IO'
)
