    # https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'AL3D.py',
    'BCR.py',
    'binary.py',
    'common.py',
    'DATX.py',
    'DI.py',
    'DZI.py',
    'EZD.py',
    'FromFile.py',
    'FRT.py',
    'GWY.py',
    'H5.py',
    'IBW.py',
    'JPK.py',
    'LEXT.py',
    'Matlab.py',
    'MI.py',
    'MetroPro.py',
    'Mitutoyo.py',
    'NC.py',
    'NPY.py',
    'OIR.py',
    'OPD.py',
    'OPDx.py',
    'PLU.py',
    'PLUX.py',
    'PS.py',
    'Reader.py',
    'SUR.py',
    'Text.py',
    'VK.py',
    'WSXM.py',
    'X3P.py',
    'XYZ.py',
    'ZON.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'SurfaceTopography/IO'
)
