    # https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'Autocorrelation.py',
    'BearingArea.py',
    'common.py',
    'Converters.py',
    'Derivative.py',
    'Detrending.py',
    'Interpolation.py',
    'PowerSpectrum.py',
    'ScalarParameters.py',
    'VariableBandwidth.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'SurfaceTopography/Nonuniform'
)
