    # https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'Bibliography.py',
    'Deprecation.py',
    'Interpolation.py',
    'Regression.py',
    'UnitConversion.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'SurfaceTopography/Support'
)
