    # https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'Autocorrelation.py',
    'BearingArea.py',
    'common.py',
    'Converters.py',
    'Derivative.py',
    'Detrending.py',
    'Filtering.py',
    'GeometryAnalysis.py',
    'Imputation.py',
    'Interpolation.py',
    'PowerSpectrum.py',
    'ScalarParameters.py',
    'VariableBandwidth.py',
    'Integration.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'SurfaceTopography/Uniform'
)
